--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,10 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- BCrypt (já vem com Spring Security, mas explicitando) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
